# microblog-2025

./: .env  .gitignore  README.md  app.db  config.py  microblog.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: about.html  base.html  index.html  login.html  registration.html
migrations/versions/: 1186abca502f_.py  3cdc64927545_users_table.py
